--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
 	<title>In a Giffy</title>
+	<link rel="icon" type="image/png" href="/public/images/favicon-96x96?v=2">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
