--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,8 @@
 <head>
 	<title>In a Giffy</title>
-	<link rel="icon" type="image/png" href="/public/images/favicon-96x96?v=2">
+	<link rel="icon" href="/main/Documents/HTML/ADP/Giffy/public/images/favicon-96x96?v=1.png" type="image/png">
+	<!-- <link rel="icon" href="<?php echo get_template_directory_uri() . '/assets/images/valo-logo-favicon.png'; ?>" 
+		type="image/png"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
